Add USPTO authority references
